2009-04-22  Eric Seidel  <eric@webkit.org>

        Rubber-stamped by David Hyatt.

        Change RenderSVGImage to dump as RenderSVGImage instead of RenderImage

        * platform/mac/svg/W3C-SVG-1.1/animate-elem-30-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/animate-elem-39-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/animate-elem-40-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/color-prof-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/coords-viewattr-02-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/filters-blend-01-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/filters-conv-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/filters-diffuse-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/filters-light-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/filters-specular-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/masking-path-04-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/render-groups-01-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-01-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-02-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-03-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-04-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-05-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-06-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-07-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-08-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-09-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-image-10-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-symbol-01-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/struct-use-01-t-expected.txt: