@@ -1,3 +1,14 @@
+2009-04-22  Pierre d'Herbemont  <pdherbemont@apple.com>
+
+        Reviewed by Simon Fraser.
+        
+        https://bugs.webkit.org/show_bug.cgi?id=24849
+
+        Add tests for media 'played' attribute (missed in r42619).
+
+        * media/video-played-expected.txt: Added.
+        * media/video-played.html: Added.
+
 2009-04-22  Eric Seidel  <eric@webkit.org>
 
         Rubber-stamped by David Hyatt.
